--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
 
 .font-open-sans {
-    font-family: "Open Sans", sans-serif;
+    font-family: "Open Sans", Arial, sans-serif;
     font-optical-sizing: auto;
 }
 
@@ -46,6 +46,12 @@
     font-size: 19px;
 }
 
+.section-heading{
+    max-width: 817px;
+    text-align: center;
+    color: #181818;
+
+}
 
 
 /* Individual classes */
@@ -136,5 +142,33 @@ header nav {
     height: 500px;
     margin-right: 6.5rem;
     vertical-align: middle;
+}
+
+#about{
+    padding: 130px 0;
+}
+#about .about-container{
+    text-align: center;
+    padding: 131px 156px;
+}
+.section-heading h2{
+    font-size: 35px;
+}
+.section-heading p{
+    margin: 30px 0;
+    font-size: 18px;
+}
+
+.about-info{
+    display: flex;
+    justify-content: space-between;
+    gap: 50px;
+}
+
+.info-card p{
+    font-size: 18px;
+}
+.info-card h4{
+    color: #474747;
 }
 
